# ApexDash

./: .env.example  .gitignore  LICENSE  README.md  apexdash  docker-compose.prod.yaml  docker-compose.yaml  lmutry
backend/: .dockerignore  Dockerfile  check_brake.py  check_gps.py  explore_db.py  explore_lateral.py  pyproject.toml
backend/analysis/: lap_comparison.py  lap_detail.py  laps.py  track.py  track_lateral.py
backend/app/: __init__.py  db.py  duck.py  main.py  models.py  telemetry_utils.py
backend/app/routers/: circuits.py  export.py  laps.py  saved_laps.py  sessions.py  telemetry.py
backend/app/services/: importer.py  motec_export.py
backend/migrations/: 001_initial.sql  002_seed_dev.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BetaBadge.tsx  CircuitsGrid.tsx  ErrorBoundary.tsx  Layout.tsx  LeftView.tsx  MiniTrackMap.tsx  RearViewCar.tsx  RightView.tsx  SideViewCar.tsx  SlipAngleCar.tsx  SpeedChart.tsx  TCChart.tsx  TelemetryChart.tsx  TelemetryPanel.tsx  ThrottleBrakeChart.tsx  TrackMap.tsx  carPhysics.ts
frontend/src/contexts/: LanguageContext.tsx
frontend/src/data/: changelog.ts
frontend/src/lib/: duckdb.ts  motecExport.ts  telemetryReader.ts
frontend/src/pages/: Dashboard.tsx  LapComparison.tsx  Novedades.tsx  SessionDetail.tsx  SessionList.tsx
frontend/src/types/: telemetry.ts
